--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,18 @@ Cargo.lock
 
 /target
 /Cargo.lock
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
+#/Cargo.lock
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
